--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -43,7 +43,8 @@ RUN pip3 install torch \
                 matplotlib \
                 pyyaml \
                 ttach \
-                grad-cam
+                grad-cam \
+                tensorboardX
 
 RUN mkdir /home/pycode && \
     mkdir /home/log && \
@@ -52,7 +53,7 @@ RUN mkdir /home/pycode && \
     mkdir -p /home/log/other_test_log && \
     cd /home/pycode && \
     git clone https://github.com/Hibiki1020/attitude_estimator_in_timesformer.git && \
-    cd attitude_estimator_in_TimeSformer && \
+    cd attitude_estimator_in_timesformer && \
     python3 setup.py build develop
 
 RUN cd /home
