--- a/pyyaml/train_config.yaml
+++ b/pyyaml/train_config.yaml
@@ -1,48 +1,50 @@
 save_top_path: "/home/log/train_log"
 
-pretrained_weights_top_directory: "/home/catkin_ws/src/sequence_image_attitude_estimator/weights"
-pretrained_weights_file_name: "vivitb_pretrained_weights.pth"
+pretrained_weights_top_directory: "/home/pycode/attitude_estimator_in_timesformer/pretrained_weights"
+pretrained_weights_file_name: "TimeSformer_divST_8x32_224_K600.pyth"
 
 
 train:
-  - "/home/strage/flight_airsim_image/train_sequence1/degree_0"
-  - "/home/strage/flight_airsim_image/train_sequence1/degree_5"
-  - "/home/strage/flight_airsim_image/train_sequence1/degree_10"
-  - "/home/strage/flight_airsim_image/train_sequence2/degree_0"
-  - "/home/strage/flight_airsim_image/train_sequence2/degree_5"
-  - "/home/strage/flight_airsim_image/train_sequence2/degree_10"
-  - "/home/strage/flight_airsim_image/train_sequence3/degree_0"
-  - "/home/strage/flight_airsim_image/train_sequence3/degree_5"
-  - "/home/strage/flight_airsim_image/train_sequence3/degree_10"
-  - "/home/strage/flight_airsim_image/train_sequence4/degree_0"
-  - "/home/strage/flight_airsim_image/train_sequence4/degree_5"
-  - "/home/strage/flight_airsim_image/train_sequence4/degree_10"
-  - "/home/strage/flight_airsim_image/sequence9"
-  - "/home/strage/flight_airsim_image/sequence10"
+  - "/home/ssd_dir/flight_airsim_image/train_sequence1/degree_0"
+#   - "/home/ssd_dir/flight_airsim_image/train_sequence1/degree_5"
+#   - "/home/ssd_dir/flight_airsim_image/train_sequence1/degree_10"
+#   - "/home/ssd_dir/flight_airsim_image/train_sequence2/degree_0"
+#   - "/home/ssd_dir/flight_airsim_image/train_sequence2/degree_5"
+#   - "/home/ssd_dir/flight_airsim_image/train_sequence2/degree_10"
+#   - "/home/ssd_dir/flight_airsim_image/train_sequence3/degree_0"
+#   - "/home/ssd_dir/flight_airsim_image/train_sequence3/degree_5"
+#   - "/home/ssd_dir/flight_airsim_image/train_sequence3/degree_10"
+#   - "/home/ssd_dir/flight_airsim_image/train_sequence4/degree_0"
+#   - "/home/ssd_dir/flight_airsim_image/train_sequence4/degree_5"
+#   - "/home/ssd_dir/flight_airsim_image/train_sequence4/degree_10"
+#   - "/home/ssd_dir/flight_airsim_image/sequence9"
+#   - "/home/ssd_dir/flight_airsim_image/sequence10"
+
 valid:
-  - "/home/strage/flight_airsim_image/sequence7"
+  - "/home/ssd_dir/flight_airsim_image/sequence7"
 
 csv_name: "data_list.csv"
 
-index_csv_path: "/home/catkin_ws/src/sequence_image_attitude_estimator/index_dict/index_dict_-30_30_range_step1deg.csv"
+index_csv_path: "/home/pycode/attitude_estimator_in_timesformer/index_dict/index_dict_-30_30_range_step1deg.csv"
 
 multiGPU: 1 #1 is ture
 
-hyperparameter:
+hyperparameters:
   img_size: 224
+  resize: 224
   patch_size: 16
   num_classes: 63
   num_frames: 8
   attention_type: 'divided_space_time'
   depth: 12
-  num_heads: 12
+  num_heads: 3
   deg_threshold: 30
-  batch_size: 320
-  num_epochs: 75
+  batch_size: 4
+  num_epochs: 5
   optimizer_name: "RAdam"
   lr: 1e-5
   alpha: 0.0
-  num_workers: 40
+  num_workers: 10
   save_step: 10
   mean_element: 0.5
   std_element: 0.5
