Train config changed

--- a/pyyaml/train_config.yaml
+++ b/pyyaml/train_config.yaml
@@ -40,7 +40,7 @@ hyperparameters:
   num_classes: 63
   num_frames: 8
   attention_type: 'divided_space_time'
-  depth: 3
+  depth: 3 #num transforemer layers
   num_heads: 12
   deg_threshold: 30
   batch_size: 220
