Add frame infer code

--- a/pyyaml/train_config.yaml
+++ b/pyyaml/train_config.yaml
@@ -52,3 +52,6 @@ hyperparameters:
   save_step: 10
   mean_element: 0.5
   std_element: 0.5
+  do_white_makeup: False
+  do_white_makeup_from_back: False
+  whiteup_frame: 0
