--- a/pyyaml/infer_config.yaml
+++ b/pyyaml/infer_config.yaml
@@ -4,17 +4,17 @@ infer_dataset:
 
 csv_name: "data_list.csv"
 
-weights_top_directory: "/home/ssd_dir/sequence_attitude_estimator_log/ViViT/train_log_2022_0801/"
+weights_top_directory: "/home/ssd_dir/attitude_estimator_in_timesformer_log/train_log_2022_0826/"
 weights_file_name: "weights.pth"
 
-infer_log_top_directory: "/home/ssd_dir/sequence_attitude_estimator_log/ViViT/train_log_2022_0801/"
-infer_log_file_name: "frame_infer_relust.csv"
+infer_log_top_directory: "/home/ssd_dir/attitude_estimator_in_timesformer_log/train_log_2022_0826/"
+infer_log_file_name: "frame_infer_relust_wo_front_1frame.csv"
 
-yaml_name: "infer_config.yaml"
+yaml_name: "infer_config_wo_front_1frame.yaml"
 
 index_dict_name: "index_dict_-30_30_range_step1deg.csv"
 
-index_csv_path: "/home/catkin_ws/src/sequence_image_attitude_estimator/index_dict/index_dict_-30_30_range_step1deg.csv"
+index_csv_path: "/home/pycode/attitude_estimator_in_timesformer/index_dict/index_dict_-30_30_range_step1deg.csv"
 
 hyperparameters:
   img_size: 224
@@ -28,6 +28,6 @@ hyperparameters:
   deg_threshold: 30
   mean_element: 0.5
   std_element: 0.5
-  do_white_makeup: False
+  do_white_makeup: True
   do_white_makeup_from_back: False
-  whiteup_frame: 0
+  whiteup_frame: 1
