--- a/pyyaml/infer_config.yaml
+++ b/pyyaml/infer_config.yaml
@@ -4,13 +4,13 @@ infer_dataset:
 
 csv_name: "data_list.csv"
 
-weights_top_directory: "/home/ssd_dir/attitude_estimator_in_timesformer_log/train_log_2022_0826/"
+weights_top_directory: "/home/ssd_dir/attitude_estimator_in_timesformer_log/train_log_2022_0831/"
 weights_file_name: "weights.pth"
 
-infer_log_top_directory: "/home/ssd_dir/attitude_estimator_in_timesformer_log/train_log_2022_0826/"
-infer_log_file_name: "frame_infer_relust_wo_back_4frame.csv"
+infer_log_top_directory: "/home/ssd_dir/attitude_estimator_in_timesformer_log/train_log_2022_0831/"
+infer_log_file_name: "frame_infer_relust.csv"
 
-yaml_name: "infer_config_wo_back_4frame.yaml"
+yaml_name: "infer_config.yaml"
 
 index_dict_name: "index_dict_-30_30_range_step1deg.csv"
 
